qt6/gen_qmessagebox.h

typedef struct QAbstractButton QAbstractButton;
typedef struct QCheckBox QCheckBox;
typedef struct QMessageBox QMessageBox;
typedef struct QMetaObject QMetaObject;
typedef struct QPixmap QPixmap;
typedef struct QPushButton QPushButton;
typedef struct QWidget QWidget;
QMessageBox* QMessageBox_new(QWidget* parent);
QMessageBox* QMessageBox_new2();
QMessageBox* QMessageBox_new3(int icon, struct miqt_string title, struct miqt_string text);
QMessageBox* QMessageBox_new4(struct miqt_string title, struct miqt_string text, int icon, int button0, int button1, int button2);
QMessageBox* QMessageBox_new5(int icon, struct miqt_string title, struct miqt_string text, int buttons);
QMessageBox* QMessageBox_new6(int icon, struct miqt_string title, struct miqt_string text, int buttons, QWidget* parent);
QMessageBox* QMessageBox_new7(int icon, struct miqt_string title, struct miqt_string text, int buttons, QWidget* parent, int flags);
QMessageBox* QMessageBox_new8(struct miqt_string title, struct miqt_string text, int icon, int button0, int button1, int button2, QWidget* parent);
QMessageBox* QMessageBox_new9(struct miqt_string title, struct miqt_string text, int icon, int button0, int button1, int button2, QWidget* parent, int f);
QMetaObject* QMessageBox_metaObject(const QMessageBox* self);
void* QMessageBox_metacast(QMessageBox* self, const char* param1);
int QMessageBox_metacall(QMessageBox* self, int param1, int param2, void** param3);
struct miqt_string QMessageBox_tr(const char* s);
void QMessageBox_addButton(QMessageBox* self, QAbstractButton* button, int role);
QPushButton* QMessageBox_addButton2(QMessageBox* self, struct miqt_string text, int role);
QPushButton* QMessageBox_addButtonWithButton(QMessageBox* self, int button);
void QMessageBox_removeButton(QMessageBox* self, QAbstractButton* button);
struct miqt_array /* of QAbstractButton* */  QMessageBox_buttons(const QMessageBox* self);
int QMessageBox_buttonRole(const QMessageBox* self, QAbstractButton* button);
void QMessageBox_setStandardButtons(QMessageBox* self, int buttons);
int QMessageBox_standardButtons(const QMessageBox* self);
int QMessageBox_standardButton(const QMessageBox* self, QAbstractButton* button);
QAbstractButton* QMessageBox_button(const QMessageBox* self, int which);
QPushButton* QMessageBox_defaultButton(const QMessageBox* self);
void QMessageBox_setDefaultButton(QMessageBox* self, QPushButton* button);
void QMessageBox_setDefaultButtonWithButton(QMessageBox* self, int button);
QAbstractButton* QMessageBox_escapeButton(const QMessageBox* self);
void QMessageBox_setEscapeButton(QMessageBox* self, QAbstractButton* button);
void QMessageBox_setEscapeButtonWithButton(QMessageBox* self, int button);
QAbstractButton* QMessageBox_clickedButton(const QMessageBox* self);
struct miqt_string QMessageBox_text(const QMessageBox* self);
void QMessageBox_setText(QMessageBox* self, struct miqt_string text);
int QMessageBox_icon(const QMessageBox* self);
void QMessageBox_setIcon(QMessageBox* self, int icon);
QPixmap* QMessageBox_iconPixmap(const QMessageBox* self);
void QMessageBox_setIconPixmap(QMessageBox* self, QPixmap* pixmap);
int QMessageBox_textFormat(const QMessageBox* self);
void QMessageBox_setTextFormat(QMessageBox* self, int format);
void QMessageBox_setTextInteractionFlags(QMessageBox* self, int flags);
int QMessageBox_textInteractionFlags(const QMessageBox* self);
void QMessageBox_setCheckBox(QMessageBox* self, QCheckBox* cb);
QCheckBox* QMessageBox_checkBox(const QMessageBox* self);
int QMessageBox_information(QWidget* parent, struct miqt_string title, struct miqt_string text);
int QMessageBox_information2(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0);
int QMessageBox_question(QWidget* parent, struct miqt_string title, struct miqt_string text);
int QMessageBox_question2(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_warning(QWidget* parent, struct miqt_string title, struct miqt_string text);
int QMessageBox_warning2(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_critical(QWidget* parent, struct miqt_string title, struct miqt_string text);
int QMessageBox_critical2(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
void QMessageBox_about(QWidget* parent, struct miqt_string title, struct miqt_string text);
void QMessageBox_aboutQt(QWidget* parent);
int QMessageBox_information3(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0);
int QMessageBox_information4(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text);
int QMessageBox_question3(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0);
int QMessageBox_question4(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text);
int QMessageBox_warning3(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_warning4(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text);
int QMessageBox_critical3(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_critical4(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text);
struct miqt_string QMessageBox_buttonText(const QMessageBox* self, int button);
void QMessageBox_setButtonText(QMessageBox* self, int button, struct miqt_string text);
struct miqt_string QMessageBox_informativeText(const QMessageBox* self);
void QMessageBox_setInformativeText(QMessageBox* self, struct miqt_string text);
struct miqt_string QMessageBox_detailedText(const QMessageBox* self);
void QMessageBox_setDetailedText(QMessageBox* self, struct miqt_string text);
void QMessageBox_setWindowTitle(QMessageBox* self, struct miqt_string title);
void QMessageBox_setWindowModality(QMessageBox* self, int windowModality);
QPixmap* QMessageBox_standardIcon(int icon);
void QMessageBox_buttonClicked(QMessageBox* self, QAbstractButton* button);
void QMessageBox_connect_buttonClicked(QMessageBox* self, intptr_t slot);
struct miqt_string QMessageBox_tr2(const char* s, const char* c);
struct miqt_string QMessageBox_tr3(const char* s, const char* c, int n);
int QMessageBox_information42(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons);
int QMessageBox_information5(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons, int defaultButton);
int QMessageBox_information52(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_question42(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons);
int QMessageBox_question5(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons, int defaultButton);
int QMessageBox_warning42(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons);
int QMessageBox_warning5(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons, int defaultButton);
int QMessageBox_critical42(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons);
int QMessageBox_critical5(QWidget* parent, struct miqt_string title, struct miqt_string text, int buttons, int defaultButton);
void QMessageBox_aboutQt2(QWidget* parent, struct miqt_string title);
int QMessageBox_information53(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_information6(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1, int button2);
int QMessageBox_information54(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text);
int QMessageBox_information62(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text);