qt6/gen_qmessagebox.nim


proc fcQMessageBox_new(parent: pointer): ptr cQMessageBox {.importc: "QMessageBox_new".}
proc fcQMessageBox_new2(): ptr cQMessageBox {.importc: "QMessageBox_new2".}
proc fcQMessageBox_new3(icon: cint, title: struct_miqt_string, text: struct_miqt_string): ptr cQMessageBox {.importc: "QMessageBox_new3".}
proc fcQMessageBox_new4(title: struct_miqt_string, text: struct_miqt_string, icon: cint, button0: cint, button1: cint, button2: cint): ptr cQMessageBox {.importc: "QMessageBox_new4".}
proc fcQMessageBox_new5(icon: cint, title: struct_miqt_string, text: struct_miqt_string, buttons: cint): ptr cQMessageBox {.importc: "QMessageBox_new5".}
proc fcQMessageBox_new6(icon: cint, title: struct_miqt_string, text: struct_miqt_string, buttons: cint, parent: pointer): ptr cQMessageBox {.importc: "QMessageBox_new6".}
proc fcQMessageBox_new7(icon: cint, title: struct_miqt_string, text: struct_miqt_string, buttons: cint, parent: pointer, flags: cint): ptr cQMessageBox {.importc: "QMessageBox_new7".}
proc fcQMessageBox_new8(title: struct_miqt_string, text: struct_miqt_string, icon: cint, button0: cint, button1: cint, button2: cint, parent: pointer): ptr cQMessageBox {.importc: "QMessageBox_new8".}
proc fcQMessageBox_new9(title: struct_miqt_string, text: struct_miqt_string, icon: cint, button0: cint, button1: cint, button2: cint, parent: pointer, f: cint): ptr cQMessageBox {.importc: "QMessageBox_new9".}
proc fcQMessageBox_metaObject(self: pointer, ): pointer {.importc: "QMessageBox_metaObject".}
proc fcQMessageBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QMessageBox_metacast".}
proc fcQMessageBox_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMessageBox_metacall".}
proc fcQMessageBox_tr(s: cstring): struct_miqt_string {.importc: "QMessageBox_tr".}
proc fcQMessageBox_addButton(self: pointer, button: pointer, role: cint): void {.importc: "QMessageBox_addButton".}
proc fcQMessageBox_addButton2(self: pointer, text: struct_miqt_string, role: cint): pointer {.importc: "QMessageBox_addButton2".}
proc fcQMessageBox_addButtonWithButton(self: pointer, button: cint): pointer {.importc: "QMessageBox_addButtonWithButton".}
proc fcQMessageBox_removeButton(self: pointer, button: pointer): void {.importc: "QMessageBox_removeButton".}
proc fcQMessageBox_buttons(self: pointer, ): struct_miqt_array {.importc: "QMessageBox_buttons".}
proc fcQMessageBox_buttonRole(self: pointer, button: pointer): cint {.importc: "QMessageBox_buttonRole".}
proc fcQMessageBox_setStandardButtons(self: pointer, buttons: cint): void {.importc: "QMessageBox_setStandardButtons".}
proc fcQMessageBox_standardButtons(self: pointer, ): cint {.importc: "QMessageBox_standardButtons".}
proc fcQMessageBox_standardButton(self: pointer, button: pointer): cint {.importc: "QMessageBox_standardButton".}
proc fcQMessageBox_button(self: pointer, which: cint): pointer {.importc: "QMessageBox_button".}
proc fcQMessageBox_defaultButton(self: pointer, ): pointer {.importc: "QMessageBox_defaultButton".}
proc fcQMessageBox_setDefaultButton(self: pointer, button: pointer): void {.importc: "QMessageBox_setDefaultButton".}
proc fcQMessageBox_setDefaultButtonWithButton(self: pointer, button: cint): void {.importc: "QMessageBox_setDefaultButtonWithButton".}
proc fcQMessageBox_escapeButton(self: pointer, ): pointer {.importc: "QMessageBox_escapeButton".}
proc fcQMessageBox_setEscapeButton(self: pointer, button: pointer): void {.importc: "QMessageBox_setEscapeButton".}
proc fcQMessageBox_setEscapeButtonWithButton(self: pointer, button: cint): void {.importc: "QMessageBox_setEscapeButtonWithButton".}
proc fcQMessageBox_clickedButton(self: pointer, ): pointer {.importc: "QMessageBox_clickedButton".}
proc fcQMessageBox_text(self: pointer, ): struct_miqt_string {.importc: "QMessageBox_text".}
proc fcQMessageBox_setText(self: pointer, text: struct_miqt_string): void {.importc: "QMessageBox_setText".}
proc fcQMessageBox_icon(self: pointer, ): cint {.importc: "QMessageBox_icon".}
proc fcQMessageBox_setIcon(self: pointer, icon: cint): void {.importc: "QMessageBox_setIcon".}
proc fcQMessageBox_iconPixmap(self: pointer, ): pointer {.importc: "QMessageBox_iconPixmap".}
proc fcQMessageBox_setIconPixmap(self: pointer, pixmap: pointer): void {.importc: "QMessageBox_setIconPixmap".}
proc fcQMessageBox_textFormat(self: pointer, ): cint {.importc: "QMessageBox_textFormat".}
proc fcQMessageBox_setTextFormat(self: pointer, format: cint): void {.importc: "QMessageBox_setTextFormat".}
proc fcQMessageBox_setTextInteractionFlags(self: pointer, flags: cint): void {.importc: "QMessageBox_setTextInteractionFlags".}
proc fcQMessageBox_textInteractionFlags(self: pointer, ): cint {.importc: "QMessageBox_textInteractionFlags".}
proc fcQMessageBox_setCheckBox(self: pointer, cb: pointer): void {.importc: "QMessageBox_setCheckBox".}
proc fcQMessageBox_checkBox(self: pointer, ): pointer {.importc: "QMessageBox_checkBox".}
proc fcQMessageBox_information(parent: pointer, title: struct_miqt_string, text: struct_miqt_string): cint {.importc: "QMessageBox_information".}
proc fcQMessageBox_information2(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint): cint {.importc: "QMessageBox_information2".}
proc fcQMessageBox_question(parent: pointer, title: struct_miqt_string, text: struct_miqt_string): cint {.importc: "QMessageBox_question".}
proc fcQMessageBox_question2(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_question2".}
proc fcQMessageBox_warning(parent: pointer, title: struct_miqt_string, text: struct_miqt_string): cint {.importc: "QMessageBox_warning".}
proc fcQMessageBox_warning2(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_warning2".}
proc fcQMessageBox_critical(parent: pointer, title: struct_miqt_string, text: struct_miqt_string): cint {.importc: "QMessageBox_critical".}
proc fcQMessageBox_critical2(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_critical2".}
proc fcQMessageBox_about(parent: pointer, title: struct_miqt_string, text: struct_miqt_string): void {.importc: "QMessageBox_about".}
proc fcQMessageBox_aboutQt(parent: pointer): void {.importc: "QMessageBox_aboutQt".}
proc fcQMessageBox_information3(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint): cint {.importc: "QMessageBox_information3".}
proc fcQMessageBox_information4(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string): cint {.importc: "QMessageBox_information4".}
proc fcQMessageBox_question3(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint): cint {.importc: "QMessageBox_question3".}
proc fcQMessageBox_question4(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string): cint {.importc: "QMessageBox_question4".}
proc fcQMessageBox_warning3(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_warning3".}
proc fcQMessageBox_warning4(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string): cint {.importc: "QMessageBox_warning4".}
proc fcQMessageBox_critical3(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_critical3".}
proc fcQMessageBox_critical4(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string): cint {.importc: "QMessageBox_critical4".}
proc fcQMessageBox_buttonText(self: pointer, button: cint): struct_miqt_string {.importc: "QMessageBox_buttonText".}
proc fcQMessageBox_setButtonText(self: pointer, button: cint, text: struct_miqt_string): void {.importc: "QMessageBox_setButtonText".}
proc fcQMessageBox_informativeText(self: pointer, ): struct_miqt_string {.importc: "QMessageBox_informativeText".}
proc fcQMessageBox_setInformativeText(self: pointer, text: struct_miqt_string): void {.importc: "QMessageBox_setInformativeText".}
proc fcQMessageBox_detailedText(self: pointer, ): struct_miqt_string {.importc: "QMessageBox_detailedText".}
proc fcQMessageBox_setDetailedText(self: pointer, text: struct_miqt_string): void {.importc: "QMessageBox_setDetailedText".}
proc fcQMessageBox_setWindowTitle(self: pointer, title: struct_miqt_string): void {.importc: "QMessageBox_setWindowTitle".}
proc fcQMessageBox_setWindowModality(self: pointer, windowModality: cint): void {.importc: "QMessageBox_setWindowModality".}
proc fcQMessageBox_standardIcon(icon: cint): pointer {.importc: "QMessageBox_standardIcon".}
proc fcQMessageBox_buttonClicked(self: pointer, button: pointer): void {.importc: "QMessageBox_buttonClicked".}
proc fQMessageBox_connect_buttonClicked(self: pointer, slot: int) {.importc: "QMessageBox_connect_buttonClicked".}
proc fcQMessageBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMessageBox_tr2".}
proc fcQMessageBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMessageBox_tr3".}
proc fcQMessageBox_information42(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint): cint {.importc: "QMessageBox_information42".}
proc fcQMessageBox_information5(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint, defaultButton: cint): cint {.importc: "QMessageBox_information5".}
proc fcQMessageBox_information52(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_information52".}
proc fcQMessageBox_question42(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint): cint {.importc: "QMessageBox_question42".}
proc fcQMessageBox_question5(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint, defaultButton: cint): cint {.importc: "QMessageBox_question5".}
proc fcQMessageBox_warning42(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint): cint {.importc: "QMessageBox_warning42".}
proc fcQMessageBox_warning5(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint, defaultButton: cint): cint {.importc: "QMessageBox_warning5".}
proc fcQMessageBox_critical42(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint): cint {.importc: "QMessageBox_critical42".}
proc fcQMessageBox_critical5(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, buttons: cint, defaultButton: cint): cint {.importc: "QMessageBox_critical5".}
proc fcQMessageBox_aboutQt2(parent: pointer, title: struct_miqt_string): void {.importc: "QMessageBox_aboutQt2".}
proc fcQMessageBox_information53(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_information53".}
proc fcQMessageBox_information6(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint, button2: cint): cint {.importc: "QMessageBox_information6".}
proc fcQMessageBox_information54(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string): cint {.importc: "QMessageBox_information54".}
proc fcQMessageBox_information62(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string): cint {.importc: "QMessageBox_information62".}
